# darknet

./: .gitignore  CMakeLists.txt
examples/: check_weights.cpp  detector.c  dice.c  yolo.c
python/: darknet.py
src/: image.c
